# cli

./: .gitignore  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: release.yml
src/: api.rs  app.rs  auth.rs  cli.rs  config.rs  error.rs  layout.rs  lib.rs  main.rs  materialize.rs  planner.rs  syncer.rs  tui.rs
src/tui/: app.rs  coverage.rs  mod.rs  model.rs  render.rs  storage.rs  tests.rs
tests/: integration.rs
